@@ -2879,6 +2879,7 @@
   char *OSDMenuItemGetValue(int ItemIndex);
   char *OSDMenuItemGetName(int ItemIndex);
   dword OSDMenuItemGetNameColor(int ItemIndex);
+  dword OSDMenuItemGetTextColor(int ItemIndex);
   dword OSDMenuItemGetID(int ItemIndex);
   char *OSDMenuItemGetCurrentValue(void);
   char *OSDMenuItemGetCurrentName(void);
